Project auth {
  database_type: 'PostgreSQL'
  Note: 'Schema for my-storage-service (auth + storage)'
}

Table auth_users {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  email varchar(255) [not null, unique]
  password_hash text [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    email [unique]
  }
}

Table auth_user_profiles {
  user_id uuid [pk, not null]
  display_name varchar(255)
  avatar_url text
  bio text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table storages {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  user_id uuid [not null]
  name varchar(255) [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    user_id
    (user_id, name) [unique]
  }
}

Table auth_refresh_tokens {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  user_id uuid [not null]
  token_hash text [not null, unique]
  expires_at timestamptz [not null]
  revoked_at timestamptz
  created_at timestamptz [not null, default: `now()`]

  indexes {
    user_id
    expires_at
    token_hash [unique]
  }
}

Table items {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  storage_id uuid [not null]
  name varchar(255) [not null]
  size_mb float [not null, default: 0]
  tags text [not null, default: '']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    storage_id
    name
  }
}

Table storage_tags {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  name varchar(255) [not null, unique]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    name [unique]
  }
}

Table storage_item_tags {
  storage_item_id uuid [not null]
  storage_tag_id uuid [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (storage_item_id, storage_tag_id) [pk]
  }
}

Ref: storages.user_id > auth_users.id [delete: cascade]
Ref: auth_user_profiles.user_id - auth_users.id [delete: cascade]
Ref: auth_refresh_tokens.user_id > auth_users.id [delete: cascade]
Ref: items.storage_id > storages.id [delete: cascade]
Ref: storage_item_tags.storage_item_id > items.id [delete: cascade]
Ref: storage_item_tags.storage_tag_id > storage_tags.id [delete: cascade]
